# chat-server

./: .gitignore  Makefile.in  aclocal.m4  configure  configure.ac  configure.scan
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile.am  Makefile.in  auth.c  auth.h  color.c  color.h  log_file.c  log_file.h  user.c  user.h
tests/: .gitignore  Makefile.am  Makefile.in  test.c  users.txt
