AC_INIT([check_test], [1.0], [bug-report@address])
AM_PATH_CHECK
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AM_PROG_AR
AC_PROG_LIBTOOL
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
#AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
