lib_LTLIBRARIES = libauth.la libcolor.la liblog_file.la
libauth_la_SOURCES = auth.c
libauth_la_CFLAGS = `pkg-config --cflags glib-2.0`
libauth_la_LDFLAGS = `pkg-config --libs glib-2.0`

libcolor_la_SOURCES = color.c
libcolor_la_CFLAGS = `pkg-config --cflags glib-2.0`
libcolor_la_LDFLAGS = `pkg-config --libs glib-2.0`

liblog_file_la_SOURCES = log_file.c
